# antas

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  benchmark.ps1  benchmark.sh  cli_test.go  compile.sh  exit_code.go  go.mod  go.sum  main.go  run_model.go
.github/workflows/: ci.yml  docker.yml  release.yml
bencher/: README.md  pyproject.toml
bencher/src/bencher/: __init__.py  benchmark.py
cmd/: help.go  run.go  version.go
console/: human_reporter.go  json_reporter.go  models.go  reporter.go  styles.go  usage.go
internal/data/: build_data.go  data.go
pdf/: output_handler.go  output_handler_test.go
renderer/: config_assembly.go  config_natif.go  page_count.go  render.go  render_test.go
