[project]
name = "bencher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gitmobkab", email = "richmondaurel77@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pypdfium2>=5.11.0",
]

[project.scripts]
bencher = "bencher:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
